fix: diminuindo o gap

--- a/components/block/block.module.css
+++ b/components/block/block.module.css
@@ -48,7 +48,7 @@
     margin-top: 10px;
     width: 100%;
     align-items: center;
-    gap: 100px;
+    gap: 15px;
 }
 
 .left h2 {
